welcome dear user

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>introduzione javascript</title>
 </head>
 <body>
-    
 
+    <div>
+        <h1>Benvenuto caro Utente!</h1>
+        <p>prima di proseguire dovrò farti alcune domande:</p>
+    </div>
     
 
 
