--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <div>
         <h1>Benvenuto caro Utente!</h1>
         <p>prima di proseguire col tuo ordine CartManZon dovrò farti alcune domande:</p>
+        <h2>nomecognomecolorepreferito22</h2>
     </div>
+
+
     
 
 
