fix final const and finish

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
             <h1>Benvenuto caro Utente!</h1>
             <p>prima di proseguire col tuo ordine CartManZon dovrò farti alcune domande:</p>
-            <button>nomecognomecolorepreferito22</button>
+            <button id="passwordtext"></button>
             
         </div>
     </main>
